--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "next": "12.1.1",
     "react": "17.0.2",
+    "react-bulma-components": "^4.1.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
