--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-bulma-components": "^4.1.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
@@ -21,6 +22,7 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "node-sass": "^7.0.1",
     "typescript": "4.6.3"
   }
 }
